Removed word-break:break-all; from webclient css as per issue 210. Interestingly enough, this only showed an effect in Chrome on my machine; in Firefox, the lines were cropped per word also with this setting.

--- a/src/web/media/css/webclient.css
+++ b/src/web/media/css/webclient.css
@@ -23,8 +23,7 @@ a:hover, a:active { color: #ccc }
 
 /* Base style for new messages in the main message area */
 .msg {
-  white-space: pre-wrap;
-  word-break: break-all;
+  white-space: pre-wrap;  
   padding: .5em .9em;}
   /*border-bottom: 1px dotted #222 } /*optional line between messages */
 
